--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,13 +24,13 @@ jobs:
       - name: Build and push backend image
         uses: docker/build-push-action@v4
         with:
-          context: ./backend
+          context: ./back
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/for-devops:backend
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v4
         with:
-          context: ./frontend
+          context: ./front
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/for-devops:frontend
